--- a/css/menustyle.css
+++ b/css/menustyle.css
@@ -20,22 +20,55 @@ header h1{
 }
 
 main{
-    margin: 0 200px;
+    margin: 0 180px;
+}
+
+section#add-recipe{
+    margin-bottom: 40px;
+}
+
+section#recipe-list{
+    margin-bottom: 40px;
 }
 
 article#week-grid{
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(7, minmax(0,1fr));
+    grid-template-rows: 1fr 3fr;
     grid-gap: 30px;
+    border: 2px solid #A0A603;
     justify-items: center;
+    margin-bottom: 30px;
+    padding: 10px 30px;
+}
+
+#week-grid figure{
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+#week-grid .hover-size{
+    transform: scale(1.03);
 }
 
 .recipe-img{
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     max-width: 100%;
     height: auto;
+}
+
+button{
+    width: 250px;
+    height: 48px;
+}
+
+form button, input[type=submit]{
+    width:150px;
 }
 
 button, input[type=submit]{
@@ -44,6 +77,12 @@ button, input[type=submit]{
     background-color: #FFF;
     border: 2px solid black;
     transition: 0.2s;
+    margin-right: 20px;
+}
+
+input[type=submit]{
+    margin-top: 20px;
+    border:3px solid #A0A603;
 }
 
 button:hover, input[type=submit]:hover {
@@ -54,12 +93,16 @@ button:hover, input[type=submit]:hover {
 
 input, select{
     padding: 5px;
-
 }
 
 input:focus, select:focus{
     outline: none;
     border-color: #F2CEAE;
+}
+
+#user-interactive{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 article#shopping-list ul{
