--- a/css/menustyle.css
+++ b/css/menustyle.css
@@ -40,7 +40,7 @@ article#optionButtons button{
 article#week-grid {
     display: grid;
     grid-template-columns: repeat(7, minmax(0, 1fr));
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 50px 3fr;
     grid-gap: 30px;
     border: 2px solid #A0A603;
     justify-items: center;
